--- a/html/tsst_p30_2.html
+++ b/html/tsst_p30_2.html
@@ -49,10 +49,10 @@
 			console.log(scrollWidth * scrolllength);
 			$('#ss_wrap .index_section .li_wrap ul, .scrollcontent').css('width', (scrollWidth * scrolllength) + 15)
 
-			function showGradient() {
+			function showGradient() {								
 				if ($(this).scrollLeft() == 0) {
 					// 시작
-				} else if (Math.ceil($(this).scrollLeft() + $(this).width()) == $('.scrollcontent').width()) {
+				} else if (Math.ceil($(this).scrollLeft() + $(this).width()) >= $('.scrollcontent').width() - 200) {
 					//스크롤이 끝에 왔을 때
 					console.log("오른쪽끝");
 					// var scrollWidth = $('.scrollcontent').innerWidth();					
@@ -147,7 +147,7 @@
 				</div>
 
 				<!--매매전략-->
-				<div class="scrollwrap cont_box index_section">
+				<div class="cont_box index_section">
 					<h5><img src="../img/cont/h5_port02_2.png" alt="포트폴리오 매매전략" /></h5>
 					<div class="scrollwrap">
 						<div class="scrollcontent">
