--- a/html/ss_tmlist.html
+++ b/html/ss_tmlist.html
@@ -89,8 +89,8 @@
 					<!-- 탭메뉴 : 선택된 메뉴 li에 클래스 focus 부여-->
 					<div class="tab_menu tab03">
 						<ul>
-							<li class="t2 li01 focus"><a href="/minsstockbot/ss_tmlist.php">업종/테마</a></li>
-							<li class="t2 li02"><a href="/minsstockbot/ss_uplist.php">급등주분석</a></li>
+							<li class="t2 li01 focus"><a href="ss_tmlist.html">업종/테마</a></li>
+							<li class="t2 li02"><a href="ss_uplist.html">급등주분석</a></li>
 						</ul>
 					</div>
 					<div style="overflow-x: auto;" data-limit="20" data-maxwidth="0" data-onewidth="0" data-end="0"
