--- a/html/ss_sample.html
+++ b/html/ss_sample.html
@@ -28,9 +28,9 @@
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<!-- highstock -->
-	<script defer src="https://code.highcharts.com/stock/highstock.js"></script>
-	<script defer src="https://code.highcharts.com/stock/modules/data.js"></script>
-	<script defer src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>
+    <script src="https://code.highcharts.com/stock/highstock.js"></script>
+    <script src="https://code.highcharts.com/stock/modules/data.js"></script>    
+    <script src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>  
 	<script src="../css/ss_chartjs.js"></script>
 	<!-- Swiper -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
@@ -174,7 +174,7 @@
 					<!--타이틀-->
 					<div class="inbox">
 						<div class="ainfo_com" style="padding:10px;">
-							<div id="containeroutline1_1" class="outline_style"></div>
+							<div id="containeroutline1_1" class="outline_style"></div>							
 						</div>
 						<div class="tit_wrap">
 							삼천리, 소매 요금 인상으로 실적 개선 </div>
