--- a/html/search_sample.html
+++ b/html/search_sample.html
@@ -29,6 +29,7 @@
 	<script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	<!-- highstock -->
 	<script defer src="https://code.highcharts.com/stock/highstock.js"></script>
+	<script defer src="https://code.highcharts.com/stock/modules/series-label.js"></script>
 	<script defer src="https://code.highcharts.com/stock/modules/data.js"></script>
 	<script defer src="https://code.highcharts.com/stock/modules/hollowcandlestick.js"></script>
 	<script src="../css/ss_chartjs.js"></script>
