--- a/html/search_itz.html
+++ b/html/search_itz.html
@@ -491,74 +491,99 @@
 		<div id="ss_wrap" class="tsst_ver">
 			<!-- 검색결과 (다수일때) -->
 			<div class="box box_top lst_total" style="margin: 5px 0px 10px;">
-				<h2 class="sch_title">삼성전기 종목 검색결과 <i>(2)</i></h2>
+				<h2 class="sch_title">자동차 종목 검색결과 <i>(0)</i></h2>
 				<span class="more">더보기</span>
 				<ul class="lst_ctt">
-					<li class="result">
-						<a href="#">
-							<span class="schCode">009150</span>
-							<span class="schList"><strong>삼성전기</strong></span>
-						</a>
-						<span class="total">종합</span>
-						<span class="score">79점</span>
-					</li>
-					<li class="result">
-						<a href="#">
-							<span class="schCode">009155</span>
-							<span class="schList"><strong>삼성전기</strong>우</span>
-						</a>
-						<span class="total">종합</span>
-						<span class="score">0점</span>
-					</li>
 				</ul>
 			</div>
 			<!-- //box_top -->
 			<div class="box box_mid lst_theme">
-				<h2 class="sch_title">테마 검색결과 <i>(1)</i></h2>
+				<h2 class="sch_title">테마 검색결과 <i>(0)</i></h2>
 				<span class="more">더보기</span>
 				<ul class="lst_ctt">
-					<li class="result">
-						<a href="#">
-							<span class="schList">환율상승 수혜</span>
-						</a>
-						<span class="total">평균 등락률</span>
-						<span class="score increase"><i class="arrow"></i> 1.4%</span>
-					</li>
 				</ul>
 			</div>
 			<!-- //box_mid -->
-
 			<div class="box box_mid lst_sectors">
-				<h2 class="sch_title">업종 검색결과 <i>(4)</i></h2>
+				<h2 class="sch_title">업종 검색결과 <i>(11)</i></h2>
 				<span class="more">더보기</span>
 				<ul class="lst_ctt">
 					<li class="result">
-						<a href="#">
-							<span class="schList">PCB</span>
+						<a href="/stock/theme_view?sn=395&amp;sl=1">
+							<span class="schList">렌터카/<strong>자동차</strong>금융</span>
 						</a>
 						<span class="total">평균 등락률</span>
-						<span class="score decrease"><i class="arrow"></i> 2.2%</span>
+						<span class="score decrease"><i class="arrow"></i> 0.8%</span>
 					</li>
 					<li class="result">
-						<a href="#">
-							<span class="schList">삼성 스마트폰 부품주</span>
+						<a href="/stock/theme_view?sn=415&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 배터리</span>
 						</a>
 						<span class="total">평균 등락률</span>
-						<span class="score increase"><i class="arrow"></i> 2.2%</span>
+						<span class="score decrease"><i class="arrow"></i> 1.1%</span>
 					</li>
 					<li class="result">
-						<a href="#">
-							<span class="schList">카메라모듈 - 스마트폰</span>
+						<a href="/stock/theme_view?sn=380&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 기타 <strong>자동차</strong>부품</span>
 						</a>
 						<span class="total">평균 등락률</span>
-						<span class="score increase"><i class="arrow"></i> 1.7%</span>
+						<span class="score decrease"><i class="arrow"></i> 1.8%</span>
 					</li>
 					<li class="result">
-						<a href="#">
-							<span class="schList">MLCC</span>
+						<a href="/stock/theme_view?sn=492&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 차체</span>
 						</a>
 						<span class="total">평균 등락률</span>
-						<span class="score increase"><i class="arrow"></i> 1%</span>
+						<span class="score decrease"><i class="arrow"></i> 1.8%</span>
+					</li>
+					<li class="result">
+						<a href="/stock/theme_view?sn=97&amp;sl=1">
+							<span class="schList"><strong>자동차</strong></span>
+						</a>
+						<span class="total">평균 등락률</span>
+						<span class="score decrease"><i class="arrow"></i> 1.9%</span>
+					</li>
+					<li class="result">
+						<a href="/stock/theme_view?sn=467&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 도어·시트</span>
+						</a>
+						<span class="total">평균 등락률</span>
+						<span class="score decrease"><i class="arrow"></i> 2.1%</span>
+					</li>
+					<li class="result">
+						<a href="/stock/theme_view?sn=218&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 전장품</span>
+						</a>
+						<span class="total">평균 등락률</span>
+						<span class="score decrease"><i class="arrow"></i> 2.4%</span>
+					</li>
+					<li class="result">
+						<a href="/stock/theme_view?sn=419&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 브레이크</span>
+						</a>
+						<span class="total">평균 등락률</span>
+						<span class="score decrease"><i class="arrow"></i> 2.6%</span>
+					</li>
+					<li class="result">
+						<a href="/stock/theme_view?sn=371&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 공조장치</span>
+						</a>
+						<span class="total">평균 등락률</span>
+						<span class="score decrease"><i class="arrow"></i> 2.7%</span>
+					</li>
+					<li class="result">
+						<a href="/stock/theme_view?sn=447&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 엔진부품</span>
+						</a>
+						<span class="total">평균 등락률</span>
+						<span class="score decrease"><i class="arrow"></i> 2.7%</span>
+					</li>
+					<li class="result">
+						<a href="/stock/theme_view?sn=451&amp;sl=1">
+							<span class="schList"><strong>자동차</strong> - 완성차</span>
+						</a>
+						<span class="total">평균 등락률</span>
+						<span class="score decrease"><i class="arrow"></i> 2.9%</span>
 					</li>
 				</ul>
 			</div>
@@ -578,6 +603,126 @@
 			</address>
 		</footer>
 	</div>
+
+	<script type="text/javascript">
+		var $ipt = $('.input_txt'),
+			$clearIpt = $('.searchclear');
+		$ipt.keyup(function () {
+			if ($('#seName').val() == '') {
+				$('.ly_rcv').hide();
+			}
+
+			$(".searchclear").toggle(Boolean($(this).val()));
+		});
+		$clearIpt.toggle(Boolean($ipt.val()));
+		$clearIpt.click(function () {
+			$(".input_txt").val('').focus();
+			$(this).hide();
+			$('.ly_rcv').hide();
+		});
+
+		//더보기
+		/* lst_total 종목검색결과, lst_theme 태마 검색결과, lst_sectors 업종 검색결과 */
+		var totalHeight = $('.lst_total li').height();
+		var lst_theme = $('.lst_theme li').height();
+		var lst_sectors = $('.lst_sectors li').height();
+		var lineblockCss = { display: 'inline-block' }
+		console.log(totalHeight, lst_theme, lst_sectors);
+		var heightTen01 = { overflow: 'hidden', height: totalHeight * 10 }
+		var heightTen02 = { overflow: 'hidden', height: lst_theme * 10 }
+		var heightTen03 = { overflow: 'hidden', height: lst_sectors * 10 }
+		var overflowAuto = { overflow: 'auto', height: 'auto' }
+		var marginTop55 = { margin: '50px 0px 10px' }
+		var marginTop10 = { margin: '10px 0 10px' }
+		function scrollMove() {
+			$('html, body').animate({
+				'scrollTop': 0
+			}, 400);
+		}
+		function btnShowHide() {
+			$('.rcv .btn_thome').show();
+			$('.rcv .btn_hback').hide();
+		}
+		if ($('.lst_total li').length > 10) {
+			console.log("전체" + heightTen01);
+			$('.lst_total .more').css(lineblockCss);
+			$('.lst_total .lst_ctt').css(heightTen01);
+		}
+		if ($('.lst_theme li').length > 10) {
+			console.log("테마" + heightTen02);
+			$('.lst_theme .more').css(lineblockCss);
+			$('.lst_theme .lst_ctt').css(heightTen02);
+		}
+		if ($('.lst_sectors li').length > 10) {
+			console.log("업종" + heightTen03);
+			$('.lst_sectors .more').css(lineblockCss);
+			$('.lst_sectors .lst_ctt').css(heightTen03);
+		}
+		$('.lst_total .more').on('click', function () {
+			btnShowHide();
+			$(this).hide();
+			$('.lst_total .lst_ctt').css(overflowAuto);
+			$('.lst_total').css(marginTop55);
+			$('.lst_theme, .lst_sectors').hide();
+			scrollMove();
+		});
+		$('.lst_theme .more').on('click', function () {
+			btnShowHide();
+			$(this).hide();
+			$('.lst_theme .lst_ctt').css(overflowAuto);
+			$('.lst_theme').css(marginTop55);
+			$('.lst_total, .lst_sectors').hide();
+			scrollMove();
+		});
+
+		$('.lst_sectors .more').on('click', function () {
+			btnShowHide();
+			$(this).hide();
+			$('.lst_sectors .lst_ctt').css(overflowAuto);
+			$('.lst_sectors').css(marginTop55);
+			$('.lst_total, .lst_theme').hide();
+			scrollMove();
+		});
+		$('.btn_thome').on('click', function () {
+			$(this).hide();
+			$('.btn_hback').show();
+			if ($('.lst_total li').length > 10) {
+				$('.lst_total .more').css(lineblockCss);
+				$('.lst_total .lst_ctt').css(heightTen);
+			}
+			if ($('.lst_theme li').length > 10) {
+				$('.lst_theme').css(marginTop10);
+				$('.lst_theme .more').css(lineblockCss);
+				$('.lst_theme .lst_ctt').css(heightTen);
+			}
+			if ($('.lst_sectors li').length > 10) {
+				$('.lst_sectors').css(marginTop10);
+				$('.lst_sectors .more').css(lineblockCss);
+				$('.lst_sectors .lst_ctt').css(heightTen);
+			}
+			$('.lst_total, .lst_theme, .lst_sectors').show();
+		});
+		$('.btn_hback').on('click', function () {
+			history.back();
+		});
+
+		// menu 가 존재하는 경우
+		if ($('#menu').length) {
+			var marginTop5 = { margin: '5px 0 10px' }
+			$('.tsst_ver .box_top').css(marginTop5);
+
+			$('.lst_total .more').on('click', function () {
+				$('.lst_total').css(marginTop5);
+			});
+			$('.lst_theme .more').on('click', function () {
+				$('.lst_theme').css(marginTop5);
+			});
+			$('.lst_sectors .more').on('click', function () {
+				$('.lst_sectors').css(marginTop5);
+			});
+		}
+	</script>
+
 </body>
 
 </html>
