--- a/html/news_view.html
+++ b/html/news_view.html
@@ -151,7 +151,26 @@
 								title="%EC%9D%B8%ED%83%91%EC%8A%A41.PNG%7C985%2C2181%7C20220322193619__0_fd_image_210_182_38__9214.png%7CC%7C2%7C"
 								style="width: 100%;"><br> <br><br>
 						</div>
-						<p style="padding: 13px; font-size:15px; line-height:18px;">&lt;©가치를 찾는 투자 나침반, 아이투자(<a href="http://www.itooza.com" target="_blank">www.itooza.com</a>) 무단전재 및 재배포금지&gt;</p>
+
+						<div id="article">
+							7일 배당락이 예정된 기업을 소개합니다<br>
+							<br>
+							<strong>1월 배당매력주</strong><br>
+							- <a href="https://www.choicestock.co.kr/stock/vod_view/194">배당 공격수 : 아폴로 커머셜 리얼이스테이트 파이낸스
+								(ARI)</a><br>
+							<strong>- 배당 미드필더 : 메디패스트 (MED)</strong><br>
+							- 배당 골키퍼 : 시티즌스 홀딩컴퍼니 (CIZN)<br>
+							<img alt="" src="http://kapi.choicestock.co.kr/webdata/attach_data/explore/202112/1474d35824cd3801fb10bfccf91d38b3.jpg">
+							<strong>[배당 미드필더 주식의 특징]</strong>
+							<ul>
+								<li>플렉스 LNG(FLNG) : 주당배당금 0.75 달러, 배당수익률 8.95%</li>
+								<li>뉴몬트 골드코프(NEM) : 주당배당금 0.55 달러, 배당수익률 5.27%</li>
+							</ul> 	
+
+							<div class="iframe_video"><iframe allowfullscreen="" frameborder="0" height="100%" src="https://www.youtube.com/embed/K8gUxJB9jJc" width="100%"></iframe></div>							
+							
+						</div>
+						<p style="padding: 13px; font-size:15px; line-height:18px;">&lt;저작권자 ⓒ데이터히어로(<a href="https://www.datahero.co.kr" target="_blank">/www.datahero.co.kr</a>) 무단전재 및 재배포 금지&gt;</p>
 
 						<!-- 최신 분석 보고서 -->
 						<div class="ainfo_com bg_fff" style="margin:20px auto;">
