--- a/html/tsst_p26_2.html
+++ b/html/tsst_p26_2.html
@@ -128,7 +128,7 @@
 					<p class="type"><a href="/stockbot/ss_blist.php?nst=1"><img
 								src="../img/cont/ico_txt_blue_chip.png" alt="우량주" /></a>
 					</p>
-					<p class="desc">인터파크 계열의 B2B 전자상거래 회사</p>
+					<p class="desc">음악 콘텐츠를 제작 및 서비스하는 회사로 레이블(Label) 영역, 솔루션(Solution) 영역, 플랫폼(Platform) 영역으로 나눠져 있습니다.</p>
 				</div>
 				<div class="tbl_wrap02">
 					<table cellpadding="0" cellspacing="0" class="tbl_analysis">
