--- a/html/tsst_p26_2.html
+++ b/html/tsst_p26_2.html
@@ -261,7 +261,30 @@
 
 						<!--v차트 분석 (특허출원)-->
 						<div class="inbox">
-							<div id="containeroutline1_3" class="outline_styleSL"></div>
+							<div class="chart_box">
+								<div id="containerfinancials1_1" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>매출액</span></li>
+									<li><span><i></i>영업이익</span></li>
+									<li><span><i></i>지배순이익</span></li>
+								</ul>
+							</div>
+							<div class="chart_box">
+								<div id="containerfinancials1_2" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>자산총계</span></li>
+									<li><span><i></i>부채총계</span></li>
+									<li><span><i></i>자본총계</span></li>
+								</ul>
+							</div>
+							<div class="chart_box">
+								<div id="containerfinancials1_3" class="outline_styleSL"></div>
+								<ul class="chart_legend">
+									<li><span><i></i>영업활동</span></li>
+									<li><span><i></i>투자활동</span></li>
+									<li><span><i></i>재무활동</span></li>
+								</ul>
+							</div>
 						</div>
 					</div>
 					<div class="group3 dpb swiper-slide">
